[project]
description = "Discrete Event Simulation (DES) Library for the Manufacturing and Supply line Domains, built on top of SImPy"
name = "hepyaestus"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

authors = [{ name = "Cornelius (Neil) Sheahan", email = "neil.sheahan@ul.ie" }]
maintainers = [
    { name = "Cornelius (Neil) Sheahan", email = "neil.sheahan@ul.ie" },
]

dependencies = ["simpy>=4.1.1"]

[dependency-groups]
dev = ["coverage>=7.6.10", "pytest-cov>=6.0.0", "pytest>=8.3.4", "ruff>=0.9.4"]

# ruff settings in ruff.toml

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
