[project]
description = "Discrete Event Simulation (DES) Library for the Manufacturing and Supply line Domains, built on top of SimPy"
name = "ProcSimPy"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

authors = [{ name = "Neil Sheahan", email = "neil.sheahan@ul.ie" }]
maintainers = [{ name = "Neil Sheahan", email = "neil.sheahan@ul.ie" }]

dependencies = ["simpy>=4.1.1"]

[project.urls]
Documentation = "https://readthedocs.org"
Homepage = "https://github.com/Welxi/ProcSimPy"
Repository = "https://github.com/Welxi/ProcSimPy"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "myst-parser>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.2.2",
    "sphinx-autodoc2>=0.5.0",
]

# ruff settings in ruff.toml

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
